--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:design:23.4.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:recyclerview-v7:23.2.1'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.google.code.gson:gson:2.8.1'
 }
