--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.2.1'
     compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.squareup.okio:okio:1.7.0'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.isseiaoki:simplecropview:1.1.4'
 }
