成功获得融合图片并显示在单独界面，增加了图片保存功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         </provider>
 
         <activity android:name=".ForeGroundActivity" />
-        <activity android:name=".ForeAcivitity.Fore0Activity"></activity>
+        <activity android:name=".ForeAcivitity.Fore0Activity" />
+        <activity android:name=".LastActivity"></activity>
     </application>
 
 </manifest>
