完成前景界面手绘图形和搜索图形在新活动中的剪裁并传到主界面中，修补了一些主界面背景的bug

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
 
         <activity android:name=".ForeGroundActivity" />
         <activity android:name=".ForeAcivitity.Fore0Activity" />
-        <activity android:name=".LastActivity"></activity>
+        <activity android:name=".LastActivity" />
+        <activity android:name=".ForeCropActivity"></activity>
     </application>
 
 </manifest>
