--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BackGroundActivity" />
+        <activity android:name=".BackGroundActivity"
+            android:launchMode="singleInstance"/>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -32,8 +34,10 @@
                 android:resource="@xml/file_paths" />
         </provider>
 
-        <activity android:name=".ForeGroundActivity" />
-        <activity android:name=".ForeAcivitity.Fore0Activity" />
+        <activity android:name=".ForeGroundActivity"
+            android:launchMode="singleInstance"/>
+        <activity android:name=".ForeAcivitity.Fore0Activity"
+            android:launchMode="singleInstance"/>
         <activity android:name=".LastActivity" />
         <activity android:name=".ForeCropActivity"></activity>
     </application>
